--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "rustsim"
+crate-type = ["cdylib"]
 
 [dependencies]
 csv = "1.1.6"
 dict = "0.1.5"
+pyo3 = { version = "0.18.0", features = ["extension-module"] }
