--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-mac:
-    name: Build for Mac x86_64 and aarch64
+    name: Build for Mac
     strategy:
       fail-fast: false
       matrix:
@@ -24,10 +24,10 @@ jobs:
           command: build
 
   build-manylinux:
-    name: Build for Linux x86_64 and aarch64
+    name: Build for Linux
     strategy:
       matrix:
-        target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
+        target: [x86_64-unknown-linux-gnu]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
