--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -19,9 +19,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
         with:
           target: ${{ matrix.target }}
           command: build
+          args: --release
 
   build-manylinux:
     name: Build for Linux
@@ -33,7 +36,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
         with:
           target: ${{ matrix.target }}
           command: build
-
+          args: --release
