--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.7'
+          architecture: x64
       - name: Build
         uses: PyO3/maturin-action@v1
         env:
@@ -33,6 +37,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.7'
+          architecture: x64
       - name: Build
         uses: PyO3/maturin-action@v1
         env:
