--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -29,10 +29,10 @@ jobs:
           pip install rustsim --no-index --find-links dist --force-reinstall
           pip install pytest
           # pytest
-      - name: Build wheels for aarm64
+      - name: Build wheels for aarch64
         uses: PyO3/maturin-action@v1
         with:
-          target: aarm64
+          target: aarch64
           command: build
           args: --release --out dist --sdist -i 3.7 3.8 3.9 pypy3.8 pypy3.9
       - name: Install built aarm64 wheel and run tests 
