--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           target: x86_64
           command: build
-          args: --release --out dist --sdist -i 3.7 3.8 3.9 pypy3.8 pypy3.9
+          args: --release --out dist -i 3.7 3.8 3.9
       - name: Install built x86_64 wheel and run tests 
         run: |
           pip install rustsim --no-index --find-links dist --force-reinstall
@@ -33,7 +33,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release --universal2 --out dist --sdist -i 3.7 3.8 3.9 pypy3.8 pypy3.9
+          args: --release --universal2 --out dist -i 3.7 3.8 3.9
       - name: Install built universal2 wheel and run tests 
         run: |
           pip install rustsim --no-index --find-links dist --force-reinstall
@@ -62,7 +62,7 @@ jobs:
         rust-toolchain: stable
         target: ${{ matrix.target }}
         manylinux: auto
-        args: --release --out dist -i 3.7 3.8 3.9 pypy3.8 pypy3.9
+        args: --release --out dist -i 3.7 3.8 3.9
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
