--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,63 @@
-[build-system]
-requires = ["maturin>=0.14,<0.15"]
-build-backend = "maturin"
-
 [project]
 name = "rustsim"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
+version = "0.1.1"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
+
+[tool.poetry]
+name = "rustsim"
+version = "0.1.1"
+description = "Semantic similarity calculation using rust."
+authors = [
+    "Justin Reese <JustinReese@lbl.gov>",
+    "Harry Caufield <jhc@lbl.gov>",
+    "Harshad Hegde <hhegde@lbl.com>",
+    ]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+maturin = "^0.14.13"
+click = "^8.1.3"
+sphinx = {version = "^6.1.3", extras = ["docs"]}
+sphinx-autodoc-typehints = {version = "^1.22", extras = ["docs"]}
+sphinx-click = {version = "^4.4.0", extras = ["docs"]}
+sphinx-rtd-theme = {version = "^1.2.0", extras = ["docs"]}
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+
+[tool.poetry.extras]
+docs = [
+    "sphinx",
+    "sphinx-autodoc-typehints",
+    "sphinx-click",
+    "sphinx-rtd-theme"
+    ]
+
+[tool.black]
+line-length = 100
+target-version = ["py38", "py39", "py310"]
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 100
+include_trailing_comma = true
+reverse_relative = true
+
+[build-system]
+requires = ["maturin>=0.14,<0.15"]
+build-backend = "maturin"
+
+
+
+# [build-system]
+# requires = ["poetry-core"]
+# build-backend = "poetry.core.masonry.api"
 
 
