--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rustsim"
-requires-python = ">=3.8"
+requires-python = ">=3.8.1"
 version = "0.1.1"
 classifiers = [
     "Programming Language :: Rust",
@@ -20,7 +20,7 @@ authors = [
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 maturin = "^0.14.13"
 click = "^8.1.3"
 sphinx = {version = "^6.1.3", extras = ["docs"]}
@@ -30,6 +30,10 @@ sphinx-rtd-theme = {version = "^1.2.0", extras = ["docs"]}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
+black = "^23.1.0"
+flake8 = "^6.0.0"
+mypy = "^1.0.1"
+flake8-pyproject = "^1.2.2"
 
 [tool.poetry.extras]
 docs = [
@@ -39,9 +43,15 @@ docs = [
     "sphinx-rtd-theme"
     ]
 
+[tool.poetry.scripts]
+
+
 [tool.black]
 line-length = 100
 target-version = ["py38", "py39", "py310"]
+
+[tool.flake8]
+max-line-length = 100
 
 [tool.isort]
 profile = "black"
