--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -77,7 +77,7 @@ jobs:
 
   build-windows:
     name: Build for Windows
-    runs-on: windows-2019
+    runs-on: windows-latest
     strategy:
       matrix:
         target: [x86_64]
