--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustsim"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,4 +12,5 @@ crate-type = ["cdylib"]
 csv = "1.1.6"
 dict = "0.1.5"
 generator = "0.7.2"
+ordered-float = "3.6.0"
 pyo3 = { version = "0.18.0", features = ["extension-module"] }
