--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ csv = "1.1.6"
 dict = "0.1.5"
 generator = "0.7.2"
 ordered-float = "3.6.0"
-pyo3 = "*"
+pyo3 = { version = "*", features = ["extension-module"] }
