--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -1,4 +1,4 @@
-name: Build and QC for rustsim
+name: Build and QC for semsimian
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
           args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11'
       - name: Install built x86_64 wheel and run tests 
         run: |
-          pip install rustsim --no-index --find-links dist --force-reinstall
+          pip install semsimian --no-index --find-links dist --force-reinstall
           pip install pytest
           # pytest
       - name: Build wheels for universal2
@@ -36,7 +36,7 @@ jobs:
           args: --release --universal2 --out dist -i 3.7 3.8 3.9 '3.10' '3.11'
       - name: Install built universal2 wheel and run tests 
         run: |
-          pip install rustsim --no-index --find-links dist --force-reinstall
+          pip install semsimian --no-index --find-links dist --force-reinstall
           # pytest
       - name: Upload wheels for Mac
         uses: actions/upload-artifact@v3
@@ -66,7 +66,7 @@ jobs:
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
-        pip install rustsim --no-index --find-links dist --force-reinstall
+        pip install semsimian --no-index --find-links dist --force-reinstall
         pip install pytest
         # pytest
     - name: Upload wheels for Linux
@@ -96,7 +96,7 @@ jobs:
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
-        pip install rustsim --no-index --find-links dist --force-reinstall
+        pip install semsimian --no-index --find-links dist --force-reinstall
         pip install pytest
     - name: Upload wheels for Windows
       uses: actions/upload-artifact@v3
