--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: QC for semsimian
+name: Prepare wheels and push release to Pypi
 
 on:
   push:
@@ -109,3 +109,21 @@ jobs:
       with:
         name: wheels
         path: dist
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [ build-mac, build-linux, build-windows ]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    steps:
+      - run: echo 'Releasing to PyPi because this is a push to main.'
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheels
+      - name: Publish to PyPI
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_PASSWORD }}
+        uses: PyO3/maturin-action@v1
+        with:
+          command: upload
+          args: --skip-existing *
