Run fewer tests for release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
 name: Prepare wheels and push release to Pypi
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+  release:
+    types: [created]
 
 jobs:
   build-mac:
@@ -24,22 +21,17 @@ jobs:
           target: x86_64
           command: build
           args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11'
-      - name: Install built x86_64 wheel and run tests
+      - name: Install built x86_64 wheel
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
-          pip install pytest
-          # pytest
       - name: Build wheels for universal2
         uses: PyO3/maturin-action@v1
         with:
           command: build
           args: --release --universal2 --out dist -i 3.7 3.8 3.9 '3.10' '3.11'
-      - name: Install built universal2 wheel and run tests
+      - name: Install built universal2 wheel
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
-          # pytest
-#      - name: Run cargo test
-#        run: cargo test
       - name: Upload wheels for Mac
         uses: actions/upload-artifact@v3
         with:
@@ -69,8 +61,6 @@ jobs:
       if: matrix.target == 'x86_64'
       run: |
         pip install semsimian --no-index --find-links dist --force-reinstall
-        pip install pytest
-        # pytest
     - name: Run cargo test
       run: cargo test
     - name: Upload wheels for Linux
@@ -101,7 +91,6 @@ jobs:
       if: matrix.target == 'x86_64'
       run: |
         pip install semsimian --no-index --find-links dist --force-reinstall
-        pip install pytest
     - name: Run cargo test
       run: cargo test
     - name: Upload wheels for Windows
@@ -114,9 +103,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: [ build-mac, build-linux, build-windows ]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     steps:
-      - run: echo 'Releasing to PyPi because this is a push to main.'
+      - run: echo 'Releasing to PyPi.'
       - uses: actions/download-artifact@v3
         with:
           name: wheels
