--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ dict = "0.1.5"
 generator = "0.7.2"
 ordered-float = "3.6.0"
 pyo3 = { version = "*", features = ["extension-module"] }
+indicatif = "*" # progress bar
