--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ ordered-float = "3.6.0"
 pyo3 = { version = "*", features = ["extension-module"] }
 indicatif = "*" # progress bar
 lazy_static = "1.4.0"
+cargo-llvm-cov = "0.5.19"
