--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ generator = "0.7.2"
 ordered-float = "3.6.0"
 pyo3 = { version = "*", features = ["extension-module"] }
 indicatif = "*" # progress bar
+rayon = "1.7.0"
