--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+
 jobs:
 
   test-linux:
@@ -46,11 +49,10 @@ jobs:
 
         # run python tests
         pytest python/tests --cov-report xml
-        
-    - name: Archive coverage reports
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-reports
-        path: |
-          output
-          coverage.lcov
+
+    - name: Store coverage reports on working branch
+      run: |
+        git add output/ coverage.lcov
+        git commit -m "Update coverage report"
+        git push $BRANCH_NAME
+
