--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -35,3 +35,5 @@ jobs:
         # pytest
     - name: Run Rust tests (cargo test)
       run: cargo test
+    - name: Run clippy (cargo clippy)
+      run: cargo clippy
