--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -57,9 +57,10 @@ jobs:
         BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
       run: |
-        git config user.email "none@no.name"
+        git config user.email "username@users.noreply.github.com"
         git config user.name "GitHub Action"
         git add output/ coverage.lcov
         git commit -m "Update coverage report"
-        git push $BRANCH_NAME
+        git merge origin/$BRANCH_NAME 
+        git push origin
 
