--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -41,24 +41,21 @@ jobs:
         cargo install cargo-llvm-cov
         cargo llvm-cov show-env --export-prefix
         cargo llvm-cov clean --workspace
-        sudo apt-get install -y lcov
         
         # the following command runs all rust tests, just like cargo test
         cargo llvm-cov --lcov --output-path coverage.lcov
 
         # convert the coverage report to more readable html
-        genhtml -o output coverage.lcov
+        # sudo apt-get install -y lcov
+        # genhtml -o output coverage.lcov
 
         # run python tests
         pytest python/tests --cov-report xml
 
-    - name: Store coverage reports on working branch
-      env:
-        BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
-      run: |
-        git config user.email "username@users.noreply.github.com"
-        git config user.name "GitHub Action"
-        git add output/ coverage.lcov
-        git commit -m "Update coverage report"
-        git push origin/$BRANCH_NAME HEAD:$BRANCH_NAME
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3.1.1
+      with:
+        files: coverage.lcov,coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
+        name: semsimian-py-${{ matrix.python-version }}
+        fail_ci_if_error: false
