--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Prepare wheels and push release to Pypi
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   build-mac:
