--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-mac:
     name: Build for Mac
+    if: '!github.event.prerelease'
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +41,7 @@ jobs:
 
   build-linux:
     name: Build for Linux
+    if: '!github.event.prerelease'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -71,6 +73,7 @@ jobs:
 
   build-windows:
     name: Build for Windows
+    if: '!github.event.prerelease'
     runs-on: windows-latest
     strategy:
       matrix:
@@ -101,6 +104,7 @@ jobs:
 
   release:
     name: Release
+    if: '!github.event.prerelease'
     runs-on: ubuntu-latest
     needs: [ build-mac, build-linux, build-windows ]
     steps:
