--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,8 +61,8 @@ jobs:
       if: matrix.target == 'x86_64'
       run: |
         pip install semsimian --no-index --find-links dist --force-reinstall
-    - name: Run cargo test
-      run: cargo test
+    - name: Run cargo test 
+      run: cargo test --features ci
     - name: Upload wheels for Linux
       uses: actions/upload-artifact@v3
       with:
@@ -92,7 +92,7 @@ jobs:
       run: |
         pip install semsimian --no-index --find-links dist --force-reinstall
     - name: Run cargo test
-      run: cargo test
+      run: cargo test --features ci
     - name: Upload wheels for Windows
       uses: actions/upload-artifact@v3
       with:
