--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,12 @@ name: Prepare wheels and push release to Pypi
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   build-mac:
     name: Build for Mac
+    if: '!github.event.prerelease'
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +41,7 @@ jobs:
 
   build-linux:
     name: Build for Linux
+    if: '!github.event.prerelease'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -61,8 +63,8 @@ jobs:
       if: matrix.target == 'x86_64'
       run: |
         pip install semsimian --no-index --find-links dist --force-reinstall
-    - name: Run cargo test 
-      run: cargo test --features ci
+    - name: Run cargo test
+      run: cargo test
     - name: Upload wheels for Linux
       uses: actions/upload-artifact@v3
       with:
@@ -71,6 +73,7 @@ jobs:
 
   build-windows:
     name: Build for Windows
+    if: '!github.event.prerelease'
     runs-on: windows-latest
     strategy:
       matrix:
@@ -92,7 +95,7 @@ jobs:
       run: |
         pip install semsimian --no-index --find-links dist --force-reinstall
     - name: Run cargo test
-      run: cargo test --features ci
+      run: cargo test
     - name: Upload wheels for Windows
       uses: actions/upload-artifact@v3
       with:
@@ -101,6 +104,7 @@ jobs:
 
   release:
     name: Release
+    if: '!github.event.prerelease'
     runs-on: ubuntu-latest
     needs: [ build-mac, build-linux, build-windows ]
     steps:
