--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ python/semsimian/semsimian.cpython-39-darwin.so
 tests/data/output/*.tsv
 flamegraph.svg
 notebooks/.ipynb_checkpoints/*
+src/pseudocode.rst
