--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,7 @@ harness = false
 [[bench]]
 name = "association_quick_search_benchmark"
 harness = false
+
+[[bench]]
+name = "association_hybrid_search_benchmark"
+harness = false
