Add parameterized tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ debug = true
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 flamegraph = "0.6.3"
+rstest = "*"
 
 [[bench]]
 name = "termset_pairwise_similarity_benchmark"
