--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ lazy_static = "1.4.0"
 cargo-llvm-cov = "0.5.19"
 rayon = "1.7.0"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
+serde = "*"
 
 [features]
 ci = []
