--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ dict = "0.1.5"
 generator = "0.7.2"
 ordered-float = "4.1.0"
 pyo3 = { version = "*", features = ["extension-module"] }
-indicatif = "*" # progress bar
 lazy_static = "1.4.0"
 cargo-llvm-cov = "0.5.19"
 rayon = "1.7.0"
-rusqlite = { version = "0.29.0", features = ["bundled"] }
-serde = "*"
-deepsize = "*"
+rusqlite = { version = "0.30.0", features = ["bundled"] }
+deepsize = "0.2.0"
+serde = "1.0.193"
+indicatif = "0.17.7"  # progress bar
 
 [features]
 ci = []
