--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ lto = true
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 flamegraph = "0.6.3"
-rstest = "*"
+rstest = "0.18.2"
 
 [[bench]]
 name = "termset_pairwise_similarity_benchmark"
