--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ cargo-llvm-cov = "0.5.19"
 rayon = "1.7.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 deepsize = "0.2.0"
-serde = "1.0.193"
+serde = { version = "1.0.193", features = ["derive"] }
 indicatif = "0.17.7"  # progress bar
 pyo3 = { version = "0.20.0", features = ["extension-module"] }
 
