--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "semsimian"
 version = "0.2.11"
 edition = "2021"
+description = "Sematic similarity calculations implemented in Rust."
+license = "BSD-3"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
