--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "semsimian"
 version = "0.2.11"
 edition = "2021"
 description = "Sematic similarity calculations implemented in Rust."
-license = "BSD-3"
+license = "BSD-3-Clause"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
