--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.11"
 edition = "2021"
 description = "Sematic similarity calculations implemented in Rust."
 license = "BSD-3-Clause"
+readme = "crates-README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
