--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,5 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
-
+description = "Sematic similarity calculations for ontologies implemented in Rust with a Python interface."
 
