Wheel for Python 3.12

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
       with:
         rust-toolchain: stable
         target: ${{ matrix.target }}
-        args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11'
+        args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11' '3.12'
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
