--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           target: x86_64
           command: build
-          args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11' '3.12'
+          args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
       - name: Install built x86_64 wheel
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
@@ -29,7 +29,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release --universal2 --out dist -i 3.7 3.8 3.9 '3.10' '3.11' '3.12'
+          args: --release --universal2 --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
       - name: Install built universal2 wheel
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
@@ -58,7 +58,7 @@ jobs:
         rust-toolchain: stable
         target: ${{ matrix.target }}
         manylinux: auto
-        args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11' '3.12'
+        args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
@@ -89,7 +89,7 @@ jobs:
       with:
         rust-toolchain: stable
         target: ${{ matrix.target }}
-        args: --release --out dist -i 3.7 3.8 3.9 '3.10' '3.11' '3.12'
+        args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
