--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -18,7 +18,7 @@ jobs:
     name: Test for Linux & Windows
     strategy:
       matrix:
-        python-version: [ '3.9', '3.10', '3.11', '3.12' ]
+        python-version: [ '3.9', '3.11', '3.12' ]
         os: [ ubuntu-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
