--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "semsimian"
-version = "0.2.14-rc1"
+version = "0.2.14"
 
 edition = "2021"
 description = "Sematic similarity calculations for ontologies implemented in Rust."
@@ -15,16 +15,16 @@ crate-type = ["cdylib", "lib"]
 [dependencies]
 csv = "1.1.6"
 dict = "0.1.5"
-generator = "0.7.2"
+generator = "0.8.1"
 ordered-float = "4.1.0"
 lazy_static = "1.4.0"
-cargo-llvm-cov = "0.5.19"
+cargo-llvm-cov = "0.6.7"
 rayon = "1.7.0"
-rusqlite = { version = "0.30.0", features = ["bundled"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 deepsize = "0.2.0"
 serde = { version = "1.0.193", features = ["derive"] }
 indicatif = "0.17.7"  # progress bar
-pyo3 = { version = "0.20.0", features = ["extension-module"] }
+pyo3 = { version = "0.20.3", features = ["extension-module"] }
 
 [features]
 ci = []
