--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,11 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: brew install gettext && brew link gettext --force
-
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          architecture: x64
+          architecture: arm64
       - uses: dtolnay/rust-toolchain@stable
-
       - name: Build wheels for x86_64
         uses: PyO3/maturin-action@v1
         with:
