--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
 name: Prepare wheels and push release to Pypi
 
 on:
-  workflow_dispatch:
+  # workflow_dispatch:
   release:
     types: [published]
-
+#! https://github.com/actions/setup-python/issues/825 (why not macos-latest?)
 jobs:
   build-mac:
     name: Build for Mac
