--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,8 @@ harness = false
 [[bench]]
 name = "association_search_similarity_benchmark"
 harness = false
+
+[workspace]
+members = [
+    "src/graph",
+]
