--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -18,12 +18,12 @@ jobs:
     name: Test for Linux & Windows
     strategy:
       matrix:
-        python-version: [ '3.9', '3.11', '3.12' ]
+        python-version: [ '3.9', '3.11', '3.12', '3.13', '3.14' ]
         os: [ ubuntu-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
