--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ jobs:
     if: '!github.event.prerelease'
     runs-on: macos-13
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@v6
+      - uses: actions/setup-python@v6
         with:
           python-version: '3.10'
           architecture: x64
@@ -22,7 +22,7 @@ jobs:
         with:
           target: x86_64
           command: build
-          args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
+          args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12' '3.13' '3.14'
       - name: Install built x86_64 wheel
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
@@ -30,14 +30,14 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release --universal2 --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
+          args: --release --universal2 --out dist -i 3.8 3.9 '3.10' '3.11' '3.12' '3.13' '3.14'
       - name: Install built universal2 wheel
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
       - name: Upload wheels for Mac
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v6
         with:
-          name: wheels
+          name: wheels-macos
           path: dist
 
   build-linux:
@@ -48,8 +48,8 @@ jobs:
       matrix:
         target: [x86_64, x86_64-unknown-linux-musl, aarch64-unknown-linux-gnu, aarch64-unknown-linux-musl]
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: '3.10'
         architecture: x64
@@ -59,7 +59,7 @@ jobs:
         rust-toolchain: stable
         target: ${{ matrix.target }}
         manylinux: auto
-        args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
+        args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12' '3.13' '3.14'
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
@@ -67,9 +67,9 @@ jobs:
     - name: Run cargo test
       run: cargo test --features ci
     - name: Upload wheels for Linux
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v6
       with:
-        name: wheels
+        name: wheels-linux-${{ matrix.target }}
         path: dist
 
   build-windows:
@@ -80,8 +80,8 @@ jobs:
       matrix:
         target: [x86_64]
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - uses: actions/setup-python@v6
       with:
         python-version: '3.10'
         architecture: x64
@@ -90,7 +90,7 @@ jobs:
       with:
         rust-toolchain: stable
         target: ${{ matrix.target }}
-        args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12'
+        args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12' '3.13' '3.14'
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
@@ -98,9 +98,9 @@ jobs:
     - name: Run cargo test
       run: cargo test --features ci
     - name: Upload wheels for Windows
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v6
       with:
-        name: wheels
+        name: wheels-windows-${{ matrix.target }}
         path: dist
 
   release:
@@ -110,13 +110,15 @@ jobs:
     needs: [ build-mac, build-linux, build-windows ]
     steps:
       - run: echo 'Releasing to PyPi.'
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v7
         with:
-          name: wheels
+          pattern: wheels-*
+          path: dist
+          merge-multiple: true
       - name: Publish to PyPI
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_PASSWORD }}
         uses: PyO3/maturin-action@v1
         with:
           command: upload
-          args: --skip-existing *
+          args: --skip-existing dist/*
