--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
         with:
-          python-version: '3.10'
-          architecture: x64
+          python-version: '3.12'
       - uses: dtolnay/rust-toolchain@stable
       - name: Build wheels for x86_64
         uses: PyO3/maturin-action@v1
@@ -24,6 +23,7 @@ jobs:
           command: build
           args: --release --out dist -i 3.8 3.9 '3.10' '3.11' '3.12' '3.13' '3.14'
       - name: Install built x86_64 wheel
+        if: runner.arch == 'X64'
         run: |
           pip install semsimian --no-index --find-links dist --force-reinstall
       - name: Build wheels for universal2
