--- a/.github/workflows/crate-release.yml
+++ b/.github/workflows/crate-release.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: katyo/publish-crates@v2
         with:
             registry-token: ${{ secrets.CRATES_IO_TOKEN }}
+            args: --allow-dirty
     #   - name: Publish
     #     uses: actions-rs/cargo@v1
     #     with:
